Estructura de carpetas

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Css/index.css">
     <title>The Simpson API</title>
 </head>
 <body>
     <header class="header">
-  <img src="The_Simpsons_yellow_logo.svg" alt="The Simpsons Logo" class="logo" />
+  <img src="Img/The_Simpsons_yellow_logo.svg" alt="The Simpsons Logo" class="logo" />
          <nav class="nav">
              <a href="#">Story</a>
              <a href="#">About us</a>
@@ -16,7 +16,7 @@
          </nav>
     </header>
     <div class="hero">
-        <img src="The_Simpsons_yellow_logo.svg" alt="logo-hero">
+        <img src="Img/The_Simpsons_yellow_logo.svg" alt="logo-hero">
     </div>
     <footer class="footer">
             <div class="copyright">
@@ -25,6 +25,6 @@
                 </span>
             </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="Js/main.js"></script>
 </body>
 </html>
