--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div class="hero">
         <img src="Img/The_Simpsons_yellow_logo.svg" alt="logo-hero">
     </div>
+    <main>
+        <div id="characters-container"></div>
+    </main>
     <footer class="footer">
             <div class="copyright">
                 <span>
