--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <header class="header">
-  <img src="Img/The_Simpsons_yellow_logo.svg" alt="The Simpsons Logo" class="logo" />
-         <nav class="nav">
-             <a href="#">Story</a>
-             <a href="#">About us</a>
-             <a href="#">docs</a>
-         </nav>
+        <a href="index.html">
+            <img src="Img/The_Simpsons_yellow_logo.svg" alt="The Simpsons Logo" class="logo" />
+        </a>
+        <nav class="nav">
+            <a href="#">Story</a>
+            <a href="#">About us</a>
+            <a href="#">docs</a>
+        </nav>
     </header>
     <div class="hero">
         <img src="Img/The_Simpsons_yellow_logo.svg" alt="logo-hero">
