--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
     <main>
         <div id="characters-container"></div>
+        <div id="pagination" class="pagination"></div>
     </main>
     <footer class="footer">
             <div class="copyright">
