--- a/character.html
+++ b/character.html
@@ -22,6 +22,7 @@
         </div>
      <main>
         <div id="loading" class="loading">Cargando...</div>
+        <div id="character-detail"></div>
     </main>
     <footer class="footer">
             <div class="copyright">
