--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
             <a href="#">About us</a>
             <a href="#">docs</a>
         </nav>
+        <div class="buscar">
+            <input type="text" id= "name-filter" placeholder="buscar...">
+            <button id="buscador">Buscar</button>
+            <ul id="autocompleteList"></ul>
+            <div id="resultados"></div>
+        </div>
     </header>
     <div class="hero">
         <img src="Img/The_Simpsons_yellow_logo.svg" alt="logo-hero">
     </div>
     <main>
         <div id="characters-container"></div>
+            <div id="no_res"></div>
         <div id="pagination" class="pagination"></div>
     </main>
     <footer class="footer">
