Secciones de header

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <img src="Img/The_Simpsons_yellow_logo.svg" alt="The Simpsons Logo" class="logo" />
         </a>
         <nav class="nav">
-            <a href="#">Story</a>
-            <a href="#">About us</a>
-            <a href="#">docs</a>
+            <a href="story.html">Story</a>
+            <a href="about-us.html">About us</a>
+            <a href="docs.html">docs</a>
         </nav>
         <div class="buscar">
             <input type="text" id= "name-filter" placeholder="buscar...">
