--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <a href="index.html">
-            <img src="Img/The_Simpsons_yellow_logo.svg" alt="The Simpsons Logo" class="logo" />
+            <img src="Img/Homer-logo-removebg-preview.png" alt="The Simpsons Logo" class="logo" />
         </a>
         <nav class="nav">
             <a href="story.html">Story</a>
@@ -100,14 +100,14 @@
             <section id="team-growth">
                 <h2>Cómo Nos Desarrollamos Durante el Proyecto</h2>
                 <p>
-                    El proyecto se fue desarrolando de una manera algo revuelta ya no que tuvimos muckup inicial y solo nos giamos por la idea de la API, lo que nos llevó a tener que rehacer varias partes del código. A pesar de estos desafíos, logramos completar el proyecto y estamos orgullosos del resultado final.
+                    El proyecto se fue desarrollando, al principio, algo lento pero conforme fuimos avanzando nos comunicamos mejor y tuvimos un avance más activo. A pesar de los desafíos, logramos completar el proyecto y estamos orgullosos del resultado final.
                 </p>
             </section>
 
             <section id="team-photo">
                 <h2>Nuestro Equipo</h2>
                 <figure>
-                    <img src="ruta/a/la/imagen.jpg" alt="Foto del equipo">
+                    <img src="Img/foto_team.jpeg" alt="Foto del equipo">
                     <figcaption>Foto del team 🫶🏼</figcaption>
                 </figure>
             </section>
