--- a/character.html
+++ b/character.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <a href="index.html">
-        <img src="Img/The_Simpsons_yellow_logo.svg" alt="The Simpsons Logo" class="logo" />
+        <img src="Img/Homer-logo-removebg-preview.png" alt="The Simpsons Logo" class="logo" />
         </a>
         <nav class="nav">
         <a href="#">Story</a>
